# ml-act

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  README.md  pyproject.toml  requirements.txt
act/configs/: text_generation.yaml  text_to_image_generation.yaml
act/configs/intervention_params/: linear_ot.yaml
act/configs/model/: FLUX.1-schnell.yaml  SDXL-Lightning.yaml
act/configs/task_params/: toxicity.yaml
act/evaluations/: calculate_clip_score.py  evaluate_toxicity.py
act/hooks/: __init__.py  intervention_hook.py  postprocess_and_save_hook.py  transport.py
act/scripts/: download_external_data.py  pipeline.py
data/: diffusion_concept_prompts.json  diffusion_prompts.json  giraffes.json  style_prompts.json
tests/data/: prompted_gens_gpt2.jsonl
tests/data/coco_captions_2017/: captions_train2017.json  captions_val2017.json
tests/data/jigsaw/: train.csv
tests/data/toxicity-responses-actadd/tiny-gpt2/act_add/non-toxic/transformer.h.0.mlp.c_proj:0/mean/: 1.pt
tests/data/toxicity-responses-actadd/tiny-gpt2/act_add/non-toxic/transformer.h.1.mlp.c_proj:0/mean/: 1.pt
tests/data/toxicity-responses-actadd/tiny-gpt2/act_add/toxic/transformer.h.0.mlp.c_proj:0/mean/: 0.pt
tests/data/toxicity-responses-actadd/tiny-gpt2/act_add/toxic/transformer.h.1.mlp.c_proj:0/mean/: 0.pt
tests/data/toxicity-responses/tiny-gpt2/jigsaw/non-toxic/transformer.h.0.mlp.c_proj:0/mean/: 0000997932d777bf.pt  000bfd0867774845.pt  000eefc67a2c930f.pt  000ffab30195c5e1.pt  0010833a96e1f886.pt  00128363e367d703.pt  0015f4aa35ebe9b5.pt  001735f961a23fc4.pt
(+24 files in other folders)
